...
        tableView.isHidden = true
    }

    // MARK: - Setups

    private func setupVC() {
        title = "To Do List"
        view.backgroundColor = .systemBackground
        navigationItem.largeTitleDisplayMode = .always
        navigationController?.navigationBar.tintColor = .label
        navigationController?.navigationBar.prefersLargeTitles = true
    }

...
